avoid double borders on conref tables

--- a/framework/css/xslt-conref.css
+++ b/framework/css/xslt-conref.css
@@ -108,6 +108,16 @@
 	color:		#999999;
 }
 
+/* avoid double border on conref reference table */
+*[class~="topic/simpletable"][conref]:not([conaction]),
+*[class~="topic/simpletable"][conkeyref]:not([conaction]),
+*[class~="topic/simpletable"][xslt-conref]:not([conaction]),
+*[class~="topic/tgroup"][conref]:not([conaction]),
+*[class~="topic/tgroup"][conkeyref]:not([conaction]),
+*[class~="topic/tgroup"][xslt-conref]:not([conaction]) {
+	border: none;
+}
+
 /* Remove static text, no margins */
 *[xslt-conref]:not([conaction]):before {
     content:	"";
